# kittynode

./: .editorconfig  .env  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  RELEASE.md  _typos.toml  biome.json  bun.lockb  cliff.toml  codecov.yaml  codecov.yml  justfile  lcov.info  lychee.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  release-plz.toml  vhs.tape
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: cd.yml  check-links.yaml  check-links.yml  check-pr-title.yaml  check-pr-title.yml  check-typos.yaml  check-typos.yml  ci-javascript.yaml  ci-javascript.yml  ci-main.yml  ci-pr.yml  ci-push.yml  ci-rust.yaml  ci-rust.yml  ci.yml  clippy-check.yml  deploy-docs.yml  main.yml  merge-gatekeeper.yaml  merge-gatekeeper.yml  release-docs.yaml  release-docs.yml  release-gui.yaml  release-gui.yml  release-please.yml  release-plz.yml  release.yml  semantic-pr-title.yml  tag-release.yml  tauri-build.yml  tauri-release.yml  validate-pr-title.yml
apps/kittynode-cli/: CHANGELOG.md  Cargo.toml
apps/kittynode-cli/src/: commands.rs  main.rs
apps/kittynode-gui/: CHANGELOG.md  package.json
apps/kittynode-gui/kittynode-frontend/: components.json  package.json  vite.config.ts
apps/kittynode-gui/kittynode-frontend/src/: app.css  app.html
apps/kittynode-gui/kittynode-frontend/src/components/: index.ts  kaomoji.svelte  welcome.svelte
apps/kittynode-gui/kittynode-frontend/src/lib/types/: package.ts
apps/kittynode-gui/kittynode-frontend/src/routes/: +layout.svelte  +page.svelte  Dashboard.svelte  Header.svelte  Welcome.svelte
apps/kittynode-gui/kittynode-frontend/src/routes/settings/: +page.svelte
apps/kittynode-gui/kittynode-frontend/src/routes/system-info/: +page.svelte
apps/kittynode-gui/kittynode-frontend/src/stores/: initialized.svelte.ts  window.svelte.ts  windowShown.svelte.ts
apps/kittynode-gui/kittynode-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/kittynode-gui/kittynode-tauri/capabilities/: default.json
apps/kittynode-gui/kittynode-tauri/src/: api.rs  lib.rs
apps/kittynode-gui/old-kittynode-frontend/src/: app.html
assets/diagrams/: diagram.tldr
crates/docker/: CHANGELOG.md  Cargo.toml
crates/kittynode/: CHANGELOG.md  Cargo.toml
crates/kittynode-axum/: Cargo.toml
crates/kittynode-axum/src/: main.rs
crates/kittynode-cli/tests/: integration.rs
crates/kittynode-core/: CHANGELOG.md  Cargo.toml
crates/kittynode-core/src/: docker.rs  file.rs  kittynode.rs  lib.rs  package.rs  system_info.rs
crates/kittynode-gui/: package.json
crates/kittynode-gui/src/: app.html
crates/kittynode-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/kittynode-gui/src-tauri/icons/: icon.icns
crates/kittynode-gui/src-tauri/src/: main.rs
crates/kittynode-gui/src/routes/package-registry/: +page.svelte
crates/kittynode-tauri/: Cargo.toml  package.json  tauri.conf.json
crates/kittynode-tauri/src/: main.rs
crates/kittynode/src/: commands.rs  main.rs
crates/kittynode_cli/: Cargo.toml
crates/kittynode_cli/src/: main.rs
crates/kittynode_core/: CHANGELOG.md  Cargo.toml
crates/kittynode_core/src/: constants.rs  docker.rs  file.rs  lib.rs  package.rs  packages.rs  utils.rs
crates/kittynode_gui/: package.json
crates/kittynode_gui/src/: app.html
crates/kittynode_gui/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
crates/kittynode_gui/src-tauri/icons/: icon.icns
crates/kittynode_gui/src-tauri/src/: lib.rs  main.rs
crates/kittynode_gui/src-web/: Cargo.toml  Rocket.toml
crates/kittynode_gui/src-web/src/: main.rs
crates/kittynode_gui/src/lib/: api.ts
crates/kittynode_gui/src/lib/schemas/: index.ts
crates/kittynode_gui/src/lib/types/: package.ts
crates/kittynode_gui/src/routes/: +layout.svelte  +page.svelte
crates/kittynode_gui/src/routes/key-manager/: +page.svelte
crates/kittynode_gui/src/routes/package-registry/: +page.svelte
crates/kittynode_gui/src/routes/package-store/: +page.svelte
crates/kittynode_gui/src/routes/port-manager/: +page.svelte
crates/kittynode_gui/src/routes/ports/: +page.svelte
crates/kittynode_gui/src/routes/security/: +page.svelte
crates/kittynode_gui/src/routes/settings/: +page.svelte
crates/stan/: Cargo.toml
crates/stan/src/: constants.rs  main.rs
crates/stan/src/commands/: install.rs  mod.rs  up.rs
crates/stn/: CHANGELOG.md  Cargo.toml
crates/stn/src/: constants.rs  docker.rs  env_manager.rs  main.rs  network.rs  stn_config.rs  update_checker.rs  utils.rs
crates/stn/src/commands/: config.rs  dashboard.rs  down.rs  install.rs  logs.rs  mod.rs  remove.rs  restart.rs  stats.rs  status.rs  up.rs  upgrade.rs
crates/stn_core/: Cargo.toml
crates/stn_core/src/: constants.rs  lib.rs  utils.rs
crates/stn_gui/: package.json  pnpm-lock.yaml
crates/stn_gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/stn_gui/src-tauri/src/: main.rs
crates/stn_gui/src/routes/: +layout.svelte  +page.svelte
crates/utils/: Cargo.toml
crates/utils/src/: constants.rs  lib.rs
docs/: README.md  architecture.md  astro.config.mjs  bun.lockb  package.json  release.md
docs/public/: CNAME
docs/src/assets/contribute/architecture/: diagram.tldr
docs/src/components/: DownloadSection.astro
docs/src/components/overrides/: Footer.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: what-is-kittynode.md  what-is-kittynode.mdx
docs/src/content/docs/contribute/: architecture.md  development-guide.mdx  questions.md
docs/src/content/docs/development/: development-guide.mdx  docker-setup.md  project-tracking.md  releases.md
docs/src/content/docs/learn/: architecture.mdx  what-is-kittynode.mdx  why-kittynode.mdx
docs/src/content/docs/resources/: educational-materials.md  hardware-guide.md  hardware-resources.md  hardware.md  questions-and-ideas.md  questions.md
docs/src/styles/: custom.css
registry/taiko/: config.toml  manifest.toml
src/: main.rs
stn/: Cargo.toml  README.md
stn/src/: main.rs
