[workspace]
members = [
  "packages/cli",
  "packages/core",
  "packages/gui/src-tauri",
  "packages/web",
]
resolver = "2"

[workspace.package]
description = "A control center for node operators."
license = "MIT"
edition = "2021"
repository = "https://github.com/kittynode/kittynode"
readme = "README.md"
