[workspace]
members = [
  "packages/cli",
  "packages/core",
  "packages/gui/src-tauri",
  "packages/web",
]
resolver = "2"

[workspace.package]
description = "A control center for world computer operators."
license = "MIT"
edition = "2024"
repository = "https://github.com/blackkittylabs/kittynode"
readme = "README.md"
