[package]
name = "kittynode-axum"
version = "0.1.0"
description.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
kittynode-core = { version = "0", path = "../kittynode-core" }
tracing-subscriber = "0.3.18"
