[package]
description.workspace = true
edition.workspace = true
license.workspace = true
name = "kittynode"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axoupdater = "0.7.1"
clap = { version = "4.5.17", features = ["derive"] }
eyre = { version = "0.6", default-features = false, features = [
    "auto-install",
    "track-caller",
] }
kittynode_core = { version = "0", path = "../kittynode_core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
