[package]
name = "kittynode"
description.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kittynode_core = { version = "^0.1.52", path = "../kittynode_core" }
axoupdater = "0.7.1"
eyre = "0.6.12"
