[package]
name = "stn"
description.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
ethers = { version = "2.0", features = ["rustls", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axoupdater = "0.7.1"
