[package]
description.workspace = true
edition.workspace = true
license.workspace = true
name = "kittynode-tauri"
publish = false
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "kittynode_tauri_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7.7"
eyre = { version = "0.6.12", default-features = false, features = [
  "auto-install",
  "track-caller",
] }
kittynode-core = { version = "0", path = "../../../crates/kittynode-core" }
once_cell = "1.20.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri = { version = "2.0.6", features = ["devtools"] }
tauri-plugin-dialog = "2.0.3"
tauri-plugin-http = "2.0.3"
tauri-plugin-os = "2.0.1"
tokio = "1.41.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tauri-cli = "2.0.4"
