[package]
description.workspace = true
edition.workspace = true
license.workspace = true
name = "kittynode_gui"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "kittynode_gui_lib"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
eyre = { version = "0.6", default-features = false, features = [
    "auto-install",
    "track-caller",
] }
kittynode_core = { version = "0", path = "../../kittynode_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
